--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "jsonwebtoken": "^8.4.0",
     "lightbox-appco": "^1.0.3",
     "moment": "^2.23.0",
+    "node-sass": "^4.11.0",
     "pg": "^7.7.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-stripe-elements": "^2.0.3",
-    "react-table": "^6.8.5",
+    "react-table": "^6.9.2",
     "reactform-appco": "^1.0.8",
     "router-express": "^1.5.2",
     "stripe": "^6.23.1",
