--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_HOST_DEV=127.0.0.1
 
 PORT=3026
 BASE_URL_DEV=http://localhost:3026
-BASE_URL_PROD=https://errors.appco.tech
+BASE_URL_PROD=https://logs.appco.tech
 JWT_SECRET=$2a$14$/4whlquDL.K0NXR3vZtb/.7Kt06n833ZSgwb6LKgDbe1G/pGrKjo6
 COOKIE_NAME=AppCoErrorsCookie
 TOKEN_NAME=AppCoErrorsToken
