--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^7.7.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-json-view": "^1.19.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-stripe-elements": "^2.0.3",
