updating remote backup repo

--- a/forever-config.json
+++ b/forever-config.json
@@ -1,5 +1,5 @@
 {
-    "uid": "appreciate-erp",
+    "uid": "error-tracker:3026",
     "max": 5,  
     "spinSleepTime": 1000, 
     "minUptime": 1000,
